syntax = "proto3";
package telemetry;
option go_package = "github.com/namikmesic/rpc-demo/proto;telemetry";


service TelemetryService {
    rpc StreamTelemetryBatch(stream TelemetryBatch) returns (stream BatchResponse);
    rpc FetchTelemetryBatch(FetchTelemetryRequest) returns (FetchTelemetryResponse);
}

message TelemetryData {
    string host_id = 1;
    string metric_name = 2;
    float value = 3;
    string timestamp = 4;
}

message TelemetryBatch {
    repeated TelemetryData items = 1;
}

message BatchResponse {
    string message = 1;
    int32 status_code = 2;
}

message FetchTelemetryRequest {
    string host_id = 1;
    string metric_name = 2;
    string start_time = 3;
    string end_time = 4;
}

message FetchTelemetryResponse {
    repeated TelemetryData items = 1;
    string next_page_token = 2;
    int32 status_code = 3;
    string message = 4;
}
